finished linux layer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ file(GLOB_RECURSE LIB_SOURCES
 if(WIN32)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mwindows -static")
 else()
-    #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
 endif()
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wstrict-overflow=3 -Wimplicit -Wconversion -Wformat -O2 -std=c99")
@@ -39,6 +39,7 @@ add_library(cplat STATIC ${LIB_SOURCES})
 if(WIN32)
     target_link_libraries(cplat PUBLIC user32)
 else()
+    target_compile_definitions(cplat PRIVATE NO_LOGGING)
     target_link_libraries(cplat PRIVATE xcb xcb-util xcb-icccm xcb-keysyms)
 endif()
 
