--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,12 +36,18 @@ endforeach()
 
 # CPLAT Libray
 add_library(cplat STATIC ${LIB_SOURCES})
+
+# logging macros
+target_compile_definitions(cplat PRIVATE NO_LOGGING)
+#target_compile_definitions(cplat PRIVATE CP_DEBUG)
+
 if(WIN32)
     target_link_libraries(cplat PUBLIC opengl32 gdi32)
 else()
-    target_compile_definitions(cplat PRIVATE NO_LOGGING)
-    target_link_libraries(cplat PUBLIC xcb xcb-util xcb-icccm xcb-keysyms)
+    target_link_libraries(cplat PUBLIC xcb xcb-util xcb-icccm xcb-keysyms X11-xcb X11 GL EGL)
 endif()
+
+target_link_libraries(cplat PUBLIC)
 
 # CPLAT test executable
 add_executable(cplat_test ${SOURCES})
